--- a/trainingrooms.droid/trainingrooms.droid.csproj
+++ b/trainingrooms.droid/trainingrooms.droid.csproj
@@ -60,8 +60,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
-    <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="TrainingRoomDetailActivity.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -70,10 +70,7 @@
     <None Include="Assets\AboutAssets.txt" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\activity_main.axml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-    <AndroidResource Include="Resources\layout\content_main.axml">
+    <AndroidResource Include="Resources\layout\Main.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\values\colors.xml" />
@@ -110,12 +107,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\activity_trainingroomdetail.axml">
+    <AndroidResource Include="Resources\layout\TrainingRoomDetail.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\layout\content_trainingroomdetail.axml">
+    <AndroidResource Include="Resources\layout\RoomListItem.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
